--- a/rosie/src/theme/lightmode.css
+++ b/rosie/src/theme/lightmode.css
@@ -70,14 +70,7 @@ ion-input {
 /* Center the title */
 ion-title {
   font-family: "Playwrite IT Moderna", serif;
-
-  &.md, &.ios {
-    width: 100%;
-    position: absolute;
-    left: 0;
-    height: 0;
-    text-align: center;
-  }
+  text-align: center;
 }
 
 .btn {
